--- a/assets/style/_reset.scss
+++ b/assets/style/_reset.scss
@@ -32,7 +32,7 @@ html, body {
 body {
 	line-height: 1;
 	background-color: #151F29;
-	font-family: 'Roboto Mono', monospace;
+	font-family: 'Roboto', monospace;
 	letter-spacing: 0.3rem;
 }
 ol, ul {
@@ -51,8 +51,8 @@ table {
 	border-spacing: 0;
 }
 
-p {
-	font-family: 'Roboto', sans-serif;
+h1, h2, h3 {
+	font-family: 'Roboto Mono', monospace;
 }
 a{
 	color: black;
