footer img remove anim

--- a/assets/style/variables/_font.scss
+++ b/assets/style/variables/_font.scss
@@ -1,52 +1,53 @@
-$font-1: 8px;
-$font-2: 10px;
-$font-3: 12px;
-$font-4: 14px;
-$font-5: 16px;
-$font-6: 18px;
-$font-7: 20px;
-$font-8: 22px;
-$font-9: 24px;
-$font-10: 26px;
-$font-11: 28px;
-$font-12: 30px;
-$font-13: 32px;
-$font-14: 34px;
-$font-15: 36px;
-$font-16: 38px;
-$font-17: 40px;
-$font-18: 42px;
-$font-19: 44px;
-$font-20: 46px;
-$font-21: 48px;
-$font-22: 50px;
-$font-23: 52px;
-$font-24: 54px;
-$font-25: 56px;
-$font-26: 58px;
-$font-27: 60px;
-$font-28: 62px;
-$font-29: 64px;
-$font-30: 66px;
-$font-31: 68px;
-$font-32: 70px;
-$font-33: 72px;
-$font-34: 74px;
-$font-35: 76px;
-$font-36: 78px;
-$font-37: 80px;
-$font-38: 82px;
-$font-39: 84px;
-$font-40: 86px;
-$font-41: 88px;
-$font-42: 90px;
-$font-43: 92px;
-$font-44: 94px;
-$font-45: 96px;
-$font-46: 98px;
-$font-47: 100px;
-$font-48: 102px;
-$font-49: 104px;
-$font-50: 106px;
-$font-51: 108px;
-$font-52: 110px;
+$font-1: 0.5rem;
+$font-2: 0.625rem;
+$font-3: 0.75rem;
+$font-4: 0.875rem;
+$font-5: 1rem;
+$font-6: 1.125rem;
+$font-7: 1.25rem;
+$font-8: 1.375rem;
+$font-9: 1.5rem;
+$font-10: 1.625rem;
+$font-11: 1.75rem;
+$font-12: 1.875rem;
+$font-13: 2rem;
+$font-14: 2.125rem;
+$font-15: 2.25rem;
+$font-16: 2.375rem;
+$font-17: 2.5rem;
+$font-18: 2.625rem;
+$font-19: 2.75rem;
+$font-20: 2.875rem;
+$font-21: 3rem;
+$font-22: 3.125rem;
+$font-23: 3.25rem;
+$font-24: 3.375rem;
+$font-25: 3.5rem;
+$font-26: 3.625rem;
+$font-27: 3.75rem;
+$font-28: 3.875rem;
+$font-29: 4rem;
+$font-30: 4.125rem;
+$font-31: 4.25rem;
+$font-32: 4.375rem;
+$font-33: 4.5rem;
+$font-34: 4.625rem;
+$font-35: 4.75rem;
+$font-36: 4.875rem;
+$font-37: 5rem;
+$font-38: 5.125rem;
+$font-39: 5.25rem;
+$font-40: 5.375rem;
+$font-41: 5.5rem;
+$font-42: 5.625rem;
+$font-43: 5.75rem;
+$font-44: 5.875rem;
+$font-45: 6rem;
+$font-46: 6.125rem;
+$font-47: 6.25rem;
+$font-48: 6.375rem;
+$font-49: 6.5rem;
+$font-50: 6.625rem;
+$font-51: 6.75rem;
+$font-52: 6.875rem;
+$font-53: 7rem;
